1.0.0 - 1.16.5 code revision